--- a/packages/use-wallet/package.json
+++ b/packages/use-wallet/package.json
@@ -42,9 +42,11 @@
   },
   "devDependencies": {
     "@agoralabs-sh/avm-web-provider": "1.7.0",
+    "@algorandfoundation/algokit-utils": "9.2.0",
     "@blockshake/defly-connect": "1.2.1",
     "@magic-ext/algorand": "24.4.2",
     "@magic-sdk/provider": "29.5.0",
+    "@metamask/sdk": "0.33.1",
     "@perawallet/connect": "1.4.1",
     "@types/node": "20.11.30",
     "@walletconnect/modal": "2.7.0",
@@ -57,6 +59,7 @@
     "@web3auth/single-factor-auth": "9.5.0",
     "algosdk": "3.5.2",
     "canonify": "2.1.1",
+    "liquid-accounts-evm": "file:../../../evm-sdk",
     "lute-connect": "1.6.3",
     "magic-sdk": "29.4.2",
     "tsup": "8.5.1",
@@ -65,7 +68,9 @@
   },
   "peerDependencies": {
     "@agoralabs-sh/avm-web-provider": "^1.7.0",
+    "@algorandfoundation/algokit-utils": "^9.2.0",
     "@blockshake/defly-connect": "^1.2.1",
+    "@metamask/sdk": "^0.33.1",
     "@perawallet/connect": "^1.4.1",
     "@walletconnect/modal": "^2.7.0",
     "@walletconnect/sign-client": "^2.23.4",
@@ -80,7 +85,13 @@
     "@agoralabs-sh/avm-web-provider": {
       "optional": true
     },
+    "@algorandfoundation/algokit-utils": {
+      "optional": true
+    },
     "@blockshake/defly-connect": {
+      "optional": true
+    },
+    "@metamask/sdk": {
       "optional": true
     },
     "@perawallet/connect": {
