--- a/packages/use-wallet/package.json
+++ b/packages/use-wallet/package.json
@@ -32,6 +32,8 @@
     "algosdk",
     "algokit",
     "kmd",
+    "metamask",
+    "rainbow",
     "web3auth"
   ],
   "files": [
@@ -48,6 +50,7 @@
     "@magic-sdk/provider": "29.5.0",
     "@metamask/sdk": "0.33.1",
     "@perawallet/connect": "1.4.1",
+    "@rainbow-me/rainbowkit": "^2.2.0",
     "@types/node": "20.11.30",
     "@walletconnect/modal": "2.7.0",
     "@walletconnect/modal-core": "2.7.0",
@@ -64,7 +67,9 @@
     "magic-sdk": "29.4.2",
     "tsup": "8.5.1",
     "tweetnacl": "1.0.3",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "viem": "^2.22.0",
+    "wagmi": "^2.14.0"
   },
   "peerDependencies": {
     "@agoralabs-sh/avm-web-provider": "^1.7.0",
@@ -79,7 +84,10 @@
     "@web3auth/modal": "^9.0.0",
     "@web3auth/single-factor-auth": "^9.0.0",
     "algosdk": "^3.0.0",
-    "lute-connect": "^1.6.3"
+    "liquid-accounts-evm": "*",
+    "lute-connect": "^1.4.1",
+    "viem": "^2.0.0",
+    "wagmi": "^2.0.0"
   },
   "peerDependenciesMeta": {
     "@agoralabs-sh/avm-web-provider": {
@@ -95,6 +103,9 @@
       "optional": true
     },
     "@perawallet/connect": {
+      "optional": true
+    },
+    "@rainbow-me/rainbowkit": {
       "optional": true
     },
     "@walletconnect/modal": {
@@ -115,7 +126,16 @@
     "@web3auth/single-factor-auth": {
       "optional": true
     },
+    "liquid-accounts-evm": {
+      "optional": true
+    },
     "lute-connect": {
+      "optional": true
+    },
+    "viem": {
+      "optional": true
+    },
+    "wagmi": {
       "optional": true
     }
   }
