--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -15,8 +15,8 @@
     "@blockshake/defly-connect": "^1.2.1",
     "@noble/ed25519": "3.0.0",
     "@perawallet/connect": "^1.4.1",
-    "@d13co/use-wallet": "workspace:*",
-    "@d13co/use-wallet-vue": "workspace:*",
+    "@txnlab/use-wallet": "workspace:*",
+    "@txnlab/use-wallet-vue": "workspace:*",
     "@walletconnect/modal": "^2.7.0",
     "@walletconnect/sign-client": "^2.23.4",
     "@web3auth/base": "9.7.0",
