--- a/examples/solid-ts/package.json
+++ b/examples/solid-ts/package.json
@@ -14,7 +14,7 @@
     "@blockshake/defly-connect": "^1.2.1",
     "@noble/ed25519": "3.0.0",
     "@perawallet/connect": "^1.4.1",
-    "@d13co/use-wallet-solid": "workspace:*",
+    "@txnlab/use-wallet-solid": "workspace:*",
     "@walletconnect/modal": "^2.7.0",
     "@walletconnect/sign-client": "^2.23.4",
     "@web3auth/base": "9.7.0",
