--- a/examples/svelte-ts/package.json
+++ b/examples/svelte-ts/package.json
@@ -18,7 +18,7 @@
     "@blockshake/defly-connect": "^1.2.1",
     "@noble/ed25519": "3.0.0",
     "@perawallet/connect": "^1.4.1",
-    "@d13co/use-wallet-svelte": "workspace:*",
+    "@txnlab/use-wallet-svelte": "workspace:*",
     "@walletconnect/modal": "^2.7.0",
     "@walletconnect/sign-client": "^2.23.4",
     "@web3auth/base": "9.7.0",
